--- a/config.yml
+++ b/config.yml
@@ -20,7 +20,7 @@ trading_options:
   # Total amount per trade (your base currency balance must be at least TRADE_SLOTS * TRADE_TOTAL)
   # Binance uses a minimum of 10 USDT per trade, add a bit extra to enable selling if the price drops.
   # Recommended: no less than 12 USDT. Suggested: 15 or more.
-  TRADE_TOTAL: 15
+  TRADE_TOTAL: 1000
 
   # List of trading pairs to exclude
   # by default we're excluding the most popular fiat pairs
@@ -34,28 +34,28 @@ trading_options:
     - UP
 
   # Maximum number of trade 'slots' at any time (your USDT balance must be at least TRADE_SLOTS * TRADE_TOTAL)
-  TRADE_SLOTS: 7
+  TRADE_SLOTS: 10
 
   # the amount of time in MINUTES to calculate the difference from the current price (minimum: 1).
-  TIME_DIFFERENCE: 2
+  TIME_DIFFERENCE: 120
 
   # Number of times to check for TP/SL during each TIME_DIFFERENCE (minimum: 1).
   # Don't spam the Binance API, you will be banned (max 1200 requests per minute per IP).
-  RECHECK_INTERVAL: 8
+  RECHECK_INTERVAL: 240
 
   # the difference in % between the first and second checks for the price.
-  CHANGE_IN_PRICE: 2
+  CHANGE_IN_PRICE: 3
 
   # define in % when to sell a coin that's not making a profit.
-  STOP_LOSS: 3
+  STOP_LOSS: 0.1
 
   # define in % when to take profit on a profitable coin.
-  TAKE_PROFIT: .8
+  TAKE_PROFIT: 0.2
 
   # Use custom tickers.txt list for filtering pairs.
   # Name of custom tickers list
   CUSTOM_LIST: True
-  TICKERS_LIST: 'tickers.txt'
+  TICKERS_LIST: 'tickers-top40.txt'
    
    # whether to use trailing stop loss or not; default is True
   # when hit TAKE_PROFIT, move STOP_LOSS to TRAILING_STOP_LOSS percentage points below TAKE_PROFIT hence locking in profit
@@ -66,12 +66,12 @@ trading_options:
   TRAILING_TAKE_PROFIT: .1
 
   # Following are used to override SL, TP, TSL & TTP & SELL_ON_SIGNAL_ONLY in the case of a market crash
-  # when hit SESSION_TAKE_PROFIT %, sell all coins and stop bot
+  # when hit SESSION_TAKE_PROFIT %, sell all coins and stop bot.
   # when hit SESSION_STOP_LOSS %, sell all coins and stop bot.
   # Note, SESSION_STOP_LOSS needs to be a NEGATIVE number i.e. -2
-  SESSION_TPSL_OVERRIDE: False
+  SESSION_TPSL_OVERRIDE: True
   SESSION_TAKE_PROFIT: 5
-  SESSION_STOP_LOSS: -2
+  SESSION_STOP_LOSS: -1
 
   # Let a signalling module control sell of coin
   # NOTE - If USE_TRAILING_STOP_LOSS: True then this needs to be False
@@ -84,7 +84,7 @@ trading_options:
 
   # Discord integration
   # Used to push alerts, messages etc to a discord channel
-  MSG_DISCORD: False
+  MSG_DISCORD: True
   
   SIGNALLING_MODULES:
     # NOTE: Only use the "os_xxxxxxxxx" or "nigec_xxxxxxxxx" etc signal/pause modules with this fork as 
