--- a/config.yml
+++ b/config.yml
@@ -34,7 +34,7 @@ trading_options:
     - UP
 
   # Maximum number of trade 'slots' at any time (your USDT balance must be at least TRADE_SLOTS * TRADE_TOTAL)
-  TRADE_SLOTS: 10
+  TRADE_SLOTS: 7
 
   # the amount of time in MINUTES to calculate the difference from the current price (minimum: 1).
   TIME_DIFFERENCE: 120
@@ -47,15 +47,15 @@ trading_options:
   CHANGE_IN_PRICE: 3
 
   # define in % when to sell a coin that's not making a profit.
-  STOP_LOSS: 0.1
+  STOP_LOSS: 5
 
   # define in % when to take profit on a profitable coin.
-  TAKE_PROFIT: 0.2
+  TAKE_PROFIT: 10
 
   # Use custom tickers.txt list for filtering pairs.
   # Name of custom tickers list
   CUSTOM_LIST: True
-  TICKERS_LIST: 'tickers-top40.txt'
+  TICKERS_LIST: 'tickers.txt'
    
    # whether to use trailing stop loss or not; default is True
   # when hit TAKE_PROFIT, move STOP_LOSS to TRAILING_STOP_LOSS percentage points below TAKE_PROFIT hence locking in profit
@@ -66,12 +66,12 @@ trading_options:
   TRAILING_TAKE_PROFIT: .1
 
   # Following are used to override SL, TP, TSL & TTP & SELL_ON_SIGNAL_ONLY in the case of a market crash
-  # when hit SESSION_TAKE_PROFIT %, sell all coins and stop bot.
+  # when hit SESSION_TAKE_PROFIT %, sell all coins and stop bot
   # when hit SESSION_STOP_LOSS %, sell all coins and stop bot.
   # Note, SESSION_STOP_LOSS needs to be a NEGATIVE number i.e. -2
-  SESSION_TPSL_OVERRIDE: True
+  SESSION_TPSL_OVERRIDE: False
   SESSION_TAKE_PROFIT: 5
-  SESSION_STOP_LOSS: -1
+  SESSION_STOP_LOSS: -2
 
   # Let a signalling module control sell of coin
   # NOTE - If USE_TRAILING_STOP_LOSS: True then this needs to be False
@@ -84,7 +84,7 @@ trading_options:
 
   # Discord integration
   # Used to push alerts, messages etc to a discord channel
-  MSG_DISCORD: True
+  MSG_DISCORD: False
   
   SIGNALLING_MODULES:
     # NOTE: Only use the "os_xxxxxxxxx" or "nigec_xxxxxxxxx" etc signal/pause modules with this fork as 
